crates/badgefx/src/snapshots/badgefx__render__tests__bordered_kotlin.snap
---
source: crates/badgefx/src/render.rs
expression: render(&badge)
---
<svg xmlns="http://www.w3.org/2000/svg" width="94" height="20" viewBox="0 0 94 20">
<rect width="94" height="20" fill="#7F52FF" rx="3" stroke="#FF5722" stroke-width="2"/>
<rect x="36" width="58" height="20" fill="#6C46D9" rx="0"/>
<rect x="91" width="3" height="20" fill="#6C46D9" rx="3"/>
<g transform="translate(11, 3) scale(0.5833333)">
<path fill="#FFFFFF" d="M24 24H0V0h24L12 12Z"/>
</g>
<text x="65" y="13" text-anchor="middle" fill="#FFFFFF" font-family="Verdana,Arial,sans-serif" font-size="10" font-weight="600">kotlin</text>
</svg>
