crates/badgefx/src/snapshots/badgefx__render__tests__custom_colors_vue.snap
---
source: crates/badgefx/src/render.rs
expression: render(&badge)
---
<svg xmlns="http://www.w3.org/2000/svg" width="73" height="20" viewBox="0 0 73 20">
<rect width="73" height="20" fill="#42B883" rx="3"/>
<rect x="36" width="37" height="20" fill="#35495E" rx="0"/>
<rect x="70" width="3" height="20" fill="#35495E" rx="3"/>
<g transform="translate(11, 3) scale(0.5833333)">
<path fill="#FFFFFF" d="M24 1.61h-9.94L12 5.16 9.94 1.61H0l12 20.78ZM12 14.08 5.16 2.23h4.43L12 6.41l2.41-4.18h4.43Z"/>
</g>
<text x="54" y="13" text-anchor="middle" fill="#FFFFFF" font-family="Verdana,Arial,sans-serif" font-size="10" font-weight="600">vue</text>
</svg>
