crates/badgefx/src/snapshots/badgefx__render__tests__divider_swift.snap
---
source: crates/badgefx/src/render.rs
expression: render(&badge)
---
<svg xmlns="http://www.w3.org/2000/svg" width="87" height="20" viewBox="0 0 87 20">
<rect width="87" height="20" fill="#F05138" rx="3"/>
<rect x="36" width="51" height="20" fill="#CC4530" rx="0"/>
<rect x="84" width="3" height="20" fill="#CC4530" rx="3"/>
<g transform="translate(11, 3) scale(0.5833333)">
<path fill="#FFFFFF" d="M24 5.93c0 1.79-.63 3.54-1.77 4.93-.36.44-.78.85-1.24 1.21 1.26 3.16.45 6.83-2.06 9.1-2.74 2.47-6.95 3.02-10.29 1.35-.06-.03-.12-.06-.18-.1.43-.06.86-.15 1.28-.28 2.16-.65 4.01-2.03 5.18-3.89.12-.19-.11-.4-.28-.27-1.97 1.52-4.66 2.29-7.11 2.08-1.51-.13-3.01-.6-4.33-1.35-.36-.2-.72-.45-1.06-.71-.06-.05-.12-.1-.18-.15l-.04-.03.05-.02c4.7-1.88 8.25-5.55 10.48-9.06.22-.35.43-.71.62-1.07-1.54.66-5.27 2.69-8.57 4.58-.52.3-1.04.6-1.55.88l-.01.01c-.36-.35-.7-.72-1.01-1.1C-.21 9.32-.6 5.3 1.3 1.77 4.44 3.89 7.94 5.64 11.72 6.89c.27.09.53.17.8.25-.78-.75-1.49-1.58-2.11-2.47-.78-1.12-1.43-2.34-1.92-3.62.03.02.07.05.1.07 2.51 1.62 5.15 3.06 7.94 4.27 1.79.77 3.64 1.43 5.54 1.96l.08.02c.08.02.17.05.25.08.26.08.54.09.8.05.56-.1 1.06-.4 1.4-.85.27-.34.42-.76.42-1.19-.01-.25-.06-.5-.15-.74-.03-.09-.07-.17-.11-.26-.02-.06-.05-.11-.08-.17l-.01-.02c.02.07.04.13.06.2.25.83.33 1.69.25 2.54-.02.12-.04.24-.06.37z"/>
</g>
<text x="61" y="13" text-anchor="middle" fill="#FFFFFF" font-family="Verdana,Arial,sans-serif" font-size="10" font-weight="600">swift</text>
  <line x1="36" y1="0" x2="36" y2="20" stroke="#555" stroke-width="1"/>
</svg>
