crates/badgefx/src/snapshots/badgefx__render__tests__icon_only_rust.snap
---
source: crates/badgefx/src/render.rs
expression: render(&badge)
---
<svg xmlns="http://www.w3.org/2000/svg" width="40" height="20" viewBox="0 0 40 20">
<rect width="40" height="20" fill="#DEA584" rx="3"/>
<g transform="translate(12, 2) scale(0.6666667)">
<path fill="#000000" d="M23.835 11.703l-1.008-.623-.028-.292 .857-.778a.348.348 0 00-.207-.588l-1.163-.218-.097-.283 .682-.91a.348.348 0 00-.322-.554l-1.17.096-.16-.26 .476-1.017a.348.348 0 00-.426-.468l-1.123.403-.215-.224 .251-1.095a.348.348 0 00-.51-.347l-1.025.684-.264-.17 .009-1.123a.348.348 0 00-.574-.278l-.88.923-.296-.1-.235-1.097a.348.348 0 00-.612-.177l-.696 1.102-.32-.025-.465-1.023a.348.348 0 00-.623-.048l-.478 1.236-.328.05-.67-.898a.348.348 0 00-.607.102l-.234 1.32-.32.124-.858-.733a.348.348 0 00-.565.245l.027 1.347-.298.191-1.012-.534a.348.348 0 00-.498.375l.287 1.32-.26.25-1.13-.307a.348.348 0 00-.41.485l.53 1.24-.208.296-1.206-.06a.348.348 0 00-.303.571l.753 1.103-.144.328-1.237.187a.348.348 0 00-.18.627l.942.917-.072.345-1.22.432a.348.348 0 00-.047.65l1.092.691-.003.35-1.156.668a.348.348 0 00.088.638l1.198.424.073.344-.95.882a.348.348 0 00.218.596l1.234.14.144.33-.717 1.063a.348.348 0 00.338.539l1.218-.153.21.298-.458 1.2a.348.348 0 00.443.448l1.15-.446.266.252-.183 1.298a.348.348 0 00.528.343l1.038-.712.31.19.106 1.34a.348.348 0 00.59.225l.884-.95.34.116.39 1.267a.348.348 0 00.626.097l.693-1.15.355.034.656 1.15a.348.348 0 00.635-.039l.474-1.31.355-.05.9 1.001a.348.348 0 00.616-.178l.237-1.36.34-.134 1.107.814a.348.348 0 00.57-.313l-.018-1.378.31-.211 1.273.592a.348.348 0 00.495-.434l-.27-1.34.266-.28 1.39.34a.348.348 0 00.396-.539l-.51-1.25.208-.339 1.452.07a.348.348 0 00.275-.62l-.727-1.109.14-.38 1.46-.208a.348.348 0 00.138-.67l-.916-.922.064-.405 1.413-.478a.348.348 0 00-.007-.69zM12 18.537a6.537 6.537 0 110-13.074 6.537 6.537 0 010 13.074zm5.765-9.132a.537.537 0 00-.481-.298h-2.154l-.67-2.062a.537.537 0 00-1.02 0l-.67 2.062H10.617a.537.537 0 00-.316.97l1.747 1.27-.668 2.056a.537.537 0 00.826.6L14 12.738l1.794 1.304a.537.537 0 00.826-.6l-.668-2.057 1.747-1.27a.537.537 0 00.166-.71z"/>
</g>
</svg>
