crates/badgefx/src/snapshots/badgefx__render__tests__outline_text_only_custom.snap
---
source: crates/badgefx/src/render.rs
expression: render(&badge)
---
<svg xmlns="http://www.w3.org/2000/svg" width="90" height="20" viewBox="0 0 90 20">
<rect width="90" height="20" fill="none" stroke="#555" stroke-width="2" rx="0"/>
<text x="45" y="13" text-anchor="middle" fill="#555" font-family="Verdana,Arial,sans-serif" font-size="11" font-weight="600">CUSTOM-LIB</text>
</svg>
